[gd_scene load_steps=7 format=2]

[ext_resource path="res://jack_whats_music.gd" type="Script" id=1]
[ext_resource path="res://Backgrounds/Lost.S02E01.1080p.BluRay.x265-RARBG.mp4_snapshot_36.10_[2023.04.03_21.57.24].jpg" type="Texture" id=2]
[ext_resource path="res://Backgrounds/dialog_box.png" type="Texture" id=3]
[ext_resource path="res://voices/jack/what_music.wav" type="AudioStream" id=4]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 254.875, 85.5 )

[node name="jack_whats_music" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 514.5, 302.5 )
scale = Vector2( 0.531771, 0.560185 )
texture = ExtResource( 2 )

[node name="text_box" type="Sprite" parent="."]
position = Vector2( 554, 496 )
scale = Vector2( 0.4348, 0.553137 )
texture = ExtResource( 3 )

[node name="jack_name" type="RichTextLabel" parent="."]
margin_left = 311.0
margin_top = 424.0
margin_right = 432.0
margin_bottom = 464.0
custom_fonts/normal_font = ExtResource( 5 )
text = "jack"

[node name="jack_dialog" type="RichTextLabel" parent="."]
margin_left = 315.0
margin_top = 452.0
margin_right = 794.0
margin_bottom = 576.0
custom_fonts/normal_font = ExtResource( 5 )
text = "uhm? What's this music? It sounds kinda groovy..."

[node name="jack_music" type="Area2D" parent="."]

[node name="jack_music_col" type="CollisionShape2D" parent="jack_music"]
position = Vector2( 253.125, 516.5 )
shape = SubResource( 1 )

[node name="jack_whats" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="mouse_entered" from="jack_music" to="." method="_on_jack_music_mouse_entered"]
[connection signal="mouse_exited" from="jack_music" to="." method="_on_jack_music_mouse_exited"]
